feat: remove country/region capture as a consequence of removing external third-party api dependence; add checks to prevent slug modification
